--- a/css/resume-styles.css
+++ b/css/resume-styles.css
@@ -3,7 +3,7 @@
 #DED6D6 - LIGHT GRAY
 #D2CBCB - MEDIUM GRAY
 #ADA0A6 - DARK GRAY
-#7D938A - GREEN
+#7D938A - GREEN   
 ---------------------------*/
 
 /* Global styles
@@ -49,19 +49,19 @@ a:hover {
     text-decoration: none;
 }
 
-h1, h2 {
-   font-family: 'Expletus Sans', cursive;
-   font-weight: 200;
-   margin: 0;
-}
-
 h2 {
     font-size: 2em;
     margin-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 200;
+    margin: 0;
 }
 
 h1 {
     font-size: 3em;
+    font-family: 'Expletus Sans', cursive;
+    font-weight: 200;
+    margin: 0;
 }
 
 h3 {
@@ -75,8 +75,8 @@ h4 {
 h5 {
     font-size: 1em;
     margin: 0;
-    font-family: 'Expletus Sans', cursive;
-   font-weight: 200;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 200;
 }
 
 .content-wrap {
@@ -96,14 +96,12 @@ h5 {
 --------------------*/
 header, footer {
     background: #7D938A;
-    color: #DED6D6;
+    color: rgb(255, 255, 255);
 }
 
 
 /* header styles */
-header h1, header h2 {
-    color: rgb(255, 255, 255);
-}
+
 header {
     padding-top: 50px;
     position: relative;
