--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
   padding: 0;
   text-align: center;
   font-family: 'Roboto', sans-serif;
-  color: #222;
+  color: white;;
   background: #f7f5f0;
 }
 /* Link Styles */
@@ -65,12 +65,10 @@ header {
 }
 header .profile-image {
   margin-top: 50px;
-  width: 150px;
-  height: 150px;
+  width: 175px;
+  height: 175px;
   border-radius: 50%;
   transition: all .5s;
-  
-
 }
 header .profile-image:hover {
   transform: scale(1.2) rotate(5deg);
@@ -82,6 +80,7 @@ header .profile-image:hover {
   border-radius: 5px;
   display: table;
   margin: 10px auto;
+  font-size: 2em;
 } 
 
 .card {
@@ -89,12 +88,12 @@ header .profile-image:hover {
   padding: 20px 40px 40px;
   max-width: 500px;
   text-align: left;
-  background: #fff;
+  background: black;
   border-bottom: 4px solid #ccc;
   border-radius: 6px;
 }
 .card:hover {
-  border-color: #31c6e0;
+  border-color: #ff57aa;
 }
 
 ul.skills {
@@ -125,6 +124,7 @@ footer .copyright {
   top: -8px;
   margin-right: 20px;
   font-size: .75em;
+  color: black;
 }
 
 footer ul {
