--- a/css/styles.css
+++ b/css/styles.css
@@ -19,10 +19,10 @@ body {
 
 a {
   text-decoration: none;
-  color: #ffffff;
+  color: #ffffff !important;
 }
 a:hover {
-  color: #ff57aa;
+  color: #c69c3a;
 }
 
 /* Section Styles */
@@ -35,9 +35,9 @@ a:hover {
   position: fixed;
   text-align: center;
   color: white;
+  z-index: 999;
 }
 .nav {
-  display: flex;
   justify-content: space-around;
   font-weight: 700;
   list-style-type: none;
@@ -54,7 +54,7 @@ a:hover {
   transition: all .5s;
 }
 .nav a:hover {
-  color: #ff57aa;
+  color: #c69c3a;
 }
 
 header {
@@ -69,7 +69,8 @@ header {
   line-height: 1.5;
 }
 header .profile-image {
-  margin-top: 100px;
+  margin-top: 75px;
+  margin-bottom: 75px;
   width: 200px;
   height: 200px;
   border-radius: 50%;
@@ -86,16 +87,18 @@ header .profile-image:hover {
 }
 
 .card {
-  margin-top: -100px;
+  margin-top: -75px;
   padding: 20px 40px 40px;
   max-width: 750px;
   text-align: left;
   background: #f7f5f0;
   border-bottom: 4px solid #ccc;
   border-radius: 6px;
+  margin-bottom: 10px;
 }
 .card:hover {
-  border-color: #ff57aa;
+  border-color: #c69c3a;
+  border-width: 2px;
 }
 
 /*Skills Section */
@@ -113,7 +116,7 @@ footer {
 
 footer .copyright {
   top: -8px;
-  margin-right: 20px;
+  margin-top: 10px;
   font-size: .75em;
   color: black;
 }
@@ -130,6 +133,7 @@ footer ul li {
 
 a.social {
   display: inline-block;
+  text-align: center;
   text-indent: -9999px;
   margin-left: 5px;
   width: 30px;
@@ -143,6 +147,9 @@ a.insta {
 }
 a.linkedin {
   background-image: url(images/linkedin.svg);
+}
+a.mail {
+  background-image: url(images/mail.svg);
 }
 a.social:hover {
   opacity: 1;
@@ -194,3 +201,7 @@ a.social:hover {
 .resume-link {
   color: #ff57aa;
 }
+
+/* Gallery Styles */
+
+  
